--- a/science/mathematics.html
+++ b/science/mathematics.html
@@ -323,6 +323,10 @@
       <li>
         <a href="https://brilliant.org/">Brilliant: Math and science courses done right</a>.
       </li>
+      <li>
+        <a  href="https://triseum.com/variant-limits/">Variant - Triseum</a>:
+        Variant:Limits is <q>a collection of games with targeted calculus learning objectives, both at the high school and collegiate level.</q>
+      </li>
     </ul>
 
     <h2>Other Links</h2>
