Krempl: Morozov: Künstliche Intelligenz sollte ein öffentliches Gut sein

--- a/science/machine-learning.html
+++ b/science/machine-learning.html
@@ -772,6 +772,10 @@
         <a href="https://www.siliconrepublic.com/advice/workplace-accessibility-ai">What <abbr>AI</abbr> can do to improve workplace accessibility for employees with disabilities</a>,
         <i class="website">Silicon Republic</i>, 20.09.2018.
       </li>
+      <li><span lang="de">Krempl, Stefan:
+        <a href="" hreflang="de">Morozov: Künstliche Intelligenz sollte ein öffentliches Gut sein</a>,
+        <i class="website">heise online</i></span>, 10.12.2018.
+      </li>
     </ul>
 
     <h3>Introductory Articles and Materials</h3>
