while True: learn()

--- a/science/mathematics.html
+++ b/science/mathematics.html
@@ -327,6 +327,10 @@
         <a  href="https://triseum.com/variant-limits/">Variant - Triseum</a>:
         Variant:Limits is <q>a collection of games with targeted calculus learning objectives, both at the high school and collegiate level.</q>
       </li>
+      <li>
+        <a href="https://luden.io/wtl/">while True: learn()</a>:
+        <q>This game is a simulator of a machine learning specialist who uses visual programming to make his living. Special skills are not required.</q>
+      </li>
     </ul>
 
     <h2>Other Links</h2>
