--- a/philosophy/kant.html
+++ b/philosophy/kant.html
@@ -201,7 +201,7 @@
         <i class="journal" lang="de">Kant-Studien</i>.
       </li>
       <li>
-        <a href="https://www.uni-marburg.de/fb03/philosophie/mr_archiv" lang="de"><i class="journal">Marburger Archiv - Kant und die Aufklärung</a>
+        <a href="https://www.uni-marburg.de/fb03/philosophie/mr_archiv" lang="de"><i class="journal">Marburger Archiv - Kant und die Aufklärung</i></a>
         at the <span lang="de">Philipps-Universität, Marburg</span>.
         <!--Old URL from H. Klemme's book http://www.uni-marburg.de/kant/ redirects here, April 2018-->
       </li>
