--- a/index.html
+++ b/index.html
@@ -106,6 +106,7 @@
 
     <h2 id="updates">Latest Updates</h2>
     <ul>
+      <li>July 2018: new page: <a href="philosophy/kant.html" lang="de">Immanuel Kant</a>.</li>
       <li>May 2018: new page: <a href="philosophy/marx_karl.html" lang="de">Karl Marx</a>.</li>
       <li>November 2017: new page: <a href="science/machine-learning.html">Machine Learning and Artificial Intelligence</a>.</li>
       <li>January 2016: new page: <a href="philscience/fleck_ludwik.html" lang="de">Ludwik Fleck</a>.</li>
