--- a/404.html
+++ b/404.html
@@ -46,7 +46,9 @@ permalink: /404.html
           <li><a href="../philosophy/learningphilosophy.html">Learning Philosophy</a></li>
           <li><a href="../philosophy/thinking.html" title="Thinking, Including Critical Thinking">Thinking</a></li>
           <!--li><a href="../philosophy/religion.html">Religion and Faith</a></li-->
+          <li><a href="../philosophy/kant.html">Immanuel Kant</a></li>
           <li><a href="../philosophy/hegel_gwf.html">G.W.F. Hegel</a></li>
+          <li><a href="../philosophy/marx_karl.html">Karl Marx</a></li>
         </ul>
       </li>
       <li><a href="../science/index.html">Science</a>
