Footer: This website is a cookie-free zone.

--- a/index.html
+++ b/index.html
@@ -223,6 +223,7 @@
       <a rel="license" href="http://creativecommons.org/licenses/by-nc-sa/4.0/" 
       lang="en-US">Creative Commons Attribution-NonCommercial-ShareAlike 4.0 International License</a>.
     </p>
+    <p>This website is a cookie-free zone.</p>
   </footer>
 </body>
 </html>
