Where to report broken links.

--- a/404.html
+++ b/404.html
@@ -26,7 +26,9 @@ permalink: /404.html
     </p>
     <ol>
       <li>The page you are looking for is not here or has been deleted.</li>
-      <li>If you followed a link from another page on the same site, please report the broken link on GitHub.</li>
+      <li>If you followed a link from another page on the same site, please
+        <a href="https://github.com/cstrobbe/philosophy-and-science/issues">report the broken link on GitHub</a>.
+      </li>
       <li>Please check whether the <abbr>URL</abbr> you entered is correct.</li>
     </ol>
 
@@ -83,6 +85,7 @@ permalink: /404.html
       <a rel="license" href="http://creativecommons.org/licenses/by-nc-sa/4.0/" 
       lang="en-US">Creative Commons Attribution-NonCommercial-ShareAlike 4.0 International License</a>.
     </p>
+    <p>This website is a cookie-free zone.</p>
   </footer>
 </body>
 </html>
