--- a/Licence_CC-BY-NC-SA-4.0.html
+++ b/Licence_CC-BY-NC-SA-4.0.html
@@ -1,20 +1,20 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
-<title>Creative Commons — Attribution-NonCommercial-ShareAlike 4.0 International — CC BY-NC-SA 4.0</title>
-<meta charset="UTF-8">
-<link rel="stylesheet" type="text/css" href="//creativecommons.org/includes/deed3.css" media="screen"/>
-<link rel="stylesheet" type="text/css" href="//creativecommons.org/includes/deed3-print.css" media="print"/>
-<!--[if lt IE 7]><link rel="stylesheet" type="text/css" href="//creativecommons.org/includes/deed3-ie.css" media="screen" /><![endif]-->
-<script type="text/javascript" src="//creativecommons.org/includes/errata.js"></script>
-<style type="text/css">#deed-main a{font-weight:normal;}.shaded{background-color:#eeeeee;margin:15px 0;padding:8px;clear:both;}h3{margin-top:0;padding-left:0;}</style>
+  <title>Creative Commons — Attribution-NonCommercial-ShareAlike 4.0 International — CC BY-NC-SA 4.0</title>
+  <meta charset="UTF-8">
+  <link rel="stylesheet" type="text/css" href="//creativecommons.org/includes/deed3.css" media="screen"/>
+  <link rel="stylesheet" type="text/css" href="//creativecommons.org/includes/deed3-print.css" media="print"/>
+  <!--[if lt IE 7]><link rel="stylesheet" type="text/css" href="//creativecommons.org/includes/deed3-ie.css" media="screen" /><![endif]-->
+  <script type="text/javascript" src="//creativecommons.org/includes/errata.js"></script>
+  <style type="text/css">#deed-main a{font-weight:normal;}.shaded{background-color:#eeeeee;margin:15px 0;padding:8px;clear:both;}h3{margin-top:0;padding-left:0;}</style>
 </head>
 <body>
 <p id="header"><a href="//creativecommons.org/">Creative Commons</a></p>
 <div id="deed" class="yellow">
 <div id="deed-head">
 <div id="cc-logo">
-<img src="//creativecommons.org/images/deed/cc-logo.jpg" alt="CC">
+<img src="../img/cc-logo.jpg" alt="CC" />
 </div>
 <h1><span>Creative Commons Legal Code</span></h1>
 <div id="deed-license">
@@ -23,7 +23,7 @@
 </div>
 <div id="deed-main">
 <div id="deed-main-content">
-<img src="//creativecommons.org/images/international/unported.png" alt="">
+<img src="../img/cc-unported.png" alt="Creative Commons umported" />
 <div id="deed-disclaimer">
 <div class="summary">
 Official translations of this license are available <a href="#languages">in other languages</a>.
