--- a/humanities/index.html
+++ b/humanities/index.html
@@ -819,6 +819,11 @@
         <a href="https://sociologydictionary.org/">Open Education Sociology Dictionary</a>,
         edited by <a href="https://kentonville.com/">Kenton Bell</a>.
       </li>
+      <li>
+        <a href="http://bigqlr.ncrm.ac.uk/">Big Qual Analysis Resource Hub</a>:
+        <q>On this website you can find a wide range of materials designed to help researchers think about, handle and analyse large volumes of complex qualitative and qualitative longitudinal data, including working with multiple archived data sets.</q>
+        <!-- See Sara Lewthwaite: https://twitter.com/slewth/status/1095738137693904896 -->
+      </li>
     </ul>
 
     <!--@@separate "Two Cultures" page?-->
@@ -834,7 +839,7 @@
     <blockquote><p>There are many fields that study/critique tech: Science &amp; Technology studies, media &amp; comm studies, Schools of Info &hellip;</blockquote>
     <p>See also the article
       <a href="https://socialmediacollective.org/reading-lists/critical-algorithm-studies/">Critical Algorithm Studies: a Reading List</a>
-      on Social Media Collectiv's research blog.
+      on Social Media Collective's research blog.
     </p>
     <!--Nicholas G. Evans' reaction: https://twitter.com/neva9257/status/930492857454088194 -->
 
