Martin Willis: What role do the humanities play in our scientific world?

--- a/humanities/index.html
+++ b/humanities/index.html
@@ -277,6 +277,21 @@
         * Paul Benneworth: "Book Review: Humanities in the Twenty-First Century: Beyond Utility and Markets by Eleonora Belfiore and Anna Upchurch", LSE: http://blogs.lse.ac.uk/lsereviewofbooks/2013/07/28/book-review-humanities-in-the-twenty-first-century-beyond-utility-and-markets/
         * Roger Scruton: "The Humanities in the Face of Brain Science": https://www.youtube.com/watch?v=ocJ0zVmWMkg 
       -->
+      <li>Willis, Martin:
+        <a href="https://www.youtube.com/watch?v=7DyJXC7K1fw">What role do the humanities play in our scientific world?</a>
+        (University of Birmingham on YouTube, 18.10.2018, 42 minutes).
+        Video recording of a talk by Professor Martin Willis, Cardiff University,
+        at the University of Birmingham on 17 October 2018.
+        The video is always available on the website of
+        <a href="https://www.birmingham.ac.uk/schools/liberal-arts-and-sciences/events/2018/martin-willis.aspx"
+        title="What role do the humanities play in our scientific world?">school or department of Liberal Arts and Natural Sciences (<abbr>LANS</abbr>)</a>.
+        The lecture's abstract goes as follows:
+        <blockquote>The relationship between the humanities and the sciences often has the hallmarks of melodrama: one is forever falling out of love with the other, or entering into a crisis of faith about their ongoing suitability.
+          In this lecture I want to examine the long history of this relationship, highlighting those key moments where the disciplines have successfully combined as well as moments of disruption and conflict. Looking backwards, across 200 years, will enable me to consider their present interdisciplinary relationship and ask what the future holds for collaborative success.
+          This is a story that will take me from Frankenstein to Futurology, during which we will encounter the key protagonists in what might be described as a battle to define truth and evidence.
+        </blockquote>
+      </li>
+      <!--More on this topic: https://www.youtube.com/results?search_query=humanities+definition+science -->
     </ul>
 
     <!-- 
