Complete list of logical fallacies. Philosophy SE

--- a/philosophy/thinking.html
+++ b/philosophy/thinking.html
@@ -310,6 +310,10 @@
       <li>The Skeptic's Guide to the Universe:
         <a href="http://www.theskepticsguide.org/resources/logical-fallacies">Logical Fallacies</a>.
       </li>
+      <li>
+        <a href="https://philosophy.stackexchange.com/q/12728/23586">Complete list of logical fallacies</a>:
+        a question posted on Philosophy Stack Exchange.
+      </li>
       <li>Wright, Robert:
         <a href="https://www.wired.com/story/sam-harris-and-the-myth-of-perfectly-rational-thought/">Sam Harris and the Myth of Perfectly Rational Thought</a>,
         <i class="magazine">Wired</i>, 17.05.2018.
