Skeptics Meta SE: List of useful sources for Skeptics.SE.

--- a/philosophy/thinking.html
+++ b/philosophy/thinking.html
@@ -447,6 +447,9 @@
         * Alexander Offord: "The Intellectual Fraudulence of Jordan Peterson (apropos of Daniel Karasik)", 14.11.2016: http://alexanderofford.com/the-intellectual-fraudulence-of-jordan-peterson-apropos-of-daniel-karasik/
         * Peggy Noona: "Who’s Afraid of Jordan Peterson?", Wall Street Journal, 25.01.2018: https://www.wsj.com/articles/whos-afraid-of-jordan-peterson-1516925574
       -->
+      <li>
+        <a href="https://skeptics.meta.stackexchange.com/q/132/37758">List of useful sources for Skeptics.SE</a>.
+      </li>
     </ul>
   </main>
 
