Philosophy SE: omniscient-omnipotent-omnipresent definition of God.

--- a/philosophy/religion.html
+++ b/philosophy/religion.html
@@ -205,6 +205,10 @@
         by Macrina Cooper-White in <i class="newspaper">The Huffington Post</i> (14.08.2013). The journalists article is based on the meta-analysis
         by Zuckerman et al (2013).
       </li>
+      <li>
+        <a href="https://philosophy.stackexchange.com/q/300/23586">Is the “omniscient-omnipotent-omnipresent” definition of God consistent?</a>
+        This question was posted on Philosophy Stack Exchage in June 2011.
+      </li>
     </ul>
 
     <h2>Other Resources</h2>
