--- a/humanities/girard_rene.html
+++ b/humanities/girard_rene.html
@@ -535,7 +535,8 @@
         <a href="https://rowman.com/ISBN/9781461624141/Discovering-Girard"><abbr>ISBN</abbr> 978-1-56101-229-9</a>.
       </li>
       <li>Osborn, Carly: 
-        <i class="booktitle">The Theory of Rene Girard: A Very Simple Introductio</i>. Australian Girard Seminar, 2017.
+        <i class="booktitle">The Theory of Rene Girard: A Very Simple Introduction</i>.
+        <a href="http://www.australiangirardseminar.org/?page_id=603">Australian Girard Seminar</a>, 2017.
         <abbr>ISBN</abbr> 978-0646960425.
       </li>
       <li>Palaver, Wolfgang:
@@ -594,13 +595,18 @@
         on Paul Nuechterlein's Girardian Lectionary website.
         <!--See also http://stmaryvalleybloom.org/violence.html -->
       </li>
+      <li lang="fr">Dormoy, Nadine:
+        <i class="booktitle">L’univers de René Girard - Entretiens</i>. Orizons, novembre 2018. (234 pages)
+        <a href="http://editionsorizons.fr/index.php/l-univers-de-rene-girard-entretiens.html" hreflang="fr"><abbr>ISBN</abbr> 979-10-309-0174-0</a>.
+        <!--@@excerpt at http://editionsorizons.fr/index.php/downloadable/download/linkSample/link_id/419/ -->
+      </li>
       <li lang="fr">Dubouchet, Paul:
         <i class="booktitle">René Girard, "cow-boy texan". Au fil de ses exploits</i>. L'Hermattan, 2017. (176 pages)
-        <a href="http://www.editions-harmattan.fr/index.asp?navig=catalogue&obj=livre&no=54094"><abbr>ISBN</abbr> 978-2-343-12503-9</a>. 
+        <a href="http://www.editions-harmattan.fr/index.asp?navig=catalogue&obj=livre&no=54094" hreflang="fr"><abbr>ISBN</abbr> 978-2-343-12503-9</a>.
       </li>
       <li lang="fr">Dubouchet, Paul:
         <i class="booktitle">Tout comprendre avec René Girard. Du moi aux grands problèmes actuels. Petit traité de la violence</i>. L'Hermattan, 2015. (218 pages)
-        <a href="http://www.editions-harmattan.fr/index.asp?navig=catalogue&obj=livre&no=46340&razSqlClone=1"><abbr>ISBN</abbr> 978-2-343-05426-1</a>. 
+        <a href="http://www.editions-harmattan.fr/index.asp?navig=catalogue&obj=livre&no=46340&razSqlClone=1" hreflang="fr"><abbr>ISBN</abbr> 978-2-343-05426-1</a>.
       </li>
       <li lang="fr">Dumouchel, Paul; Dupuy, Jean-Pierre, <abbr>dir.</abbr>:
         <i class="booktitle">L'auto-organisation. De la physique au politique</i>. Colloque de Cerisy, 1981. Editions du Seuil, 1983, 1994. (560 pages)
