--- a/science/hdm_scienceday.html
+++ b/science/hdm_scienceday.html
@@ -154,14 +154,13 @@
           <li><a href="http://events.mi.hdm-stuttgart.de/2018-06-29-11-science-day/Rocket%20Engines%20-%20Engineering">Rocket Engines" - Engineering</a>  (<span lang="de">Stephan Soller</span>, 95 minutes, in German).</li>
         </ul>
       </li>
-      <li>12th Science: 7 December 2018. <a href="http://events.mi.hdm-stuttgart.de/2018-12-07-12-science-day" title="Topics of the 12th Science Day">Topics</a>:
+      <li>12th Science: 7 December 2018. Topics:
         <ul>
-          <li>Alien Civilizations (Andreas Stiegler)</li>
-          <li>Seeing black holes through X-ray eyes (Victoria Grinberg)</li>
-          <li>Open Discussion, moderated by Walter Kriha</li>
+          <li><a href="https://events.mi.hdm-stuttgart.de/2018-12-07-12-science-day/Alien%20Civilizations">Alien Civilizations</a> (<span lang="de">Andreas Stiegler</span>, in German),</li>
+          <li><a href="https://events.mi.hdm-stuttgart.de/2018-12-07-12-science-day/Seeing%20black%20holes%20through%20X-ray%20eyes">Seeing black holes through X-ray eyes</a> (<span lang="de">Victoria Grinberg</span>, in English).</li>
         </ul>
       </li>
-      <!--<li>12th Science: @@ December 2018 / January 2019. Topics:
+      <!--<li>13th Science: @@ December 2018 / January 2019. Topics:
         <ul>
           <li></li>
           <li></li>
