h2: Interviews and Talks

--- a/humanities/girard_rene.html
+++ b/humanities/girard_rene.html
@@ -835,6 +835,23 @@
       </li>
     </ul>
 
+    <h2>Interview and Talks</h2>
+    <ul>
+      <li><span lang="fr">Girard, René</span>:
+        <a href="https://www.youtube.com/watch?v=GIwEs1RkiX4" lang="fr">René Girard - Entretien avec Jacques Chancel (1978)</a>
+        (René Girard Archives on YouTube, 58 minutes, 29.04.2016).
+        This is an audio recording of an interview by the journalist Jacques Chancel in Radioscopie (France Inter) on 02.11.1978.
+        The video has no subtitles.
+      </li>
+      <li><span lang="fr">Girard, René</span>:
+        <a href="https://www.youtube.com/watch?v=VY23aM_k9XA" lang="fr">René Girard - La Violence au Cœur des Sociétés (2002)</a>
+        (René Girard Archives on YouTube, 84 minutes, 09.11.2015).
+        This is a video recording of René Girard's talk at the <span lang="fr">77e Semaine Sociale</span>, focusing on violence,
+        on 16.11.2002. Girard's talk is preceded by a 7-minute introduction by Jean Boissonnat.
+        The video has no subtitles.
+      </li>
+    </ul>
+
     <h2>Other Links</h2>
     <ul>
       <li id="haven-girard-bio">Haven, Cynthia L.:
