13th Science Day, July 2019

--- a/science/hdm_scienceday.html
+++ b/science/hdm_scienceday.html
@@ -160,7 +160,13 @@
           <li><a href="https://events.mi.hdm-stuttgart.de/2018-12-07-12-science-day/Seeing%20black%20holes%20through%20X-ray%20eyes">Seeing black holes through X-ray eyes</a> (<span lang="de">Victoria Grinberg</span>, in English).</li>
         </ul>
       </li>
-      <!--<li>13th Science: @@ December 2018 / January 2019. Topics:
+      <li><a href="https://events.mi.hdm-stuttgart.de/2019-07-05-13-science-day">13th Science</a>: 5 July 2019. Topics:
+        <ul>
+          <li><a href="https://events.mi.hdm-stuttgart.de/2019-07-05-13-science-day/Emergence">Emergence</a> (<span lang="de">Andreas Stiegler</span>, in German),</li>
+          <li><abbr>AI</abbr> in Science Fiction (<span lang="de">Nadine Hammele</span>, in German).</li>
+        </ul>
+      </li>
+      <!--<li>14th Science: @@ December 2019 / January 2020. Topics:
         <ul>
           <li></li>
           <li></li>
