Politiques de Caïn (2004). Le christianisme est-il une religion du livre?

--- a/humanities/girard_rene.html
+++ b/humanities/girard_rene.html
@@ -185,8 +185,8 @@
     </ul>
 
     <h2 id="girard_biblio">Books</h2>
-    <p><span lang="fr">René Girard</span> published many books. Most of them are monographs,
-      but some are collections of journal articles.
+    <p><span lang="fr">René Girard</span> published many books. Most of them are monographs;
+      some are collections of journal articles.
     </p>
     <ul>
       <li lang="fr">Girard, René: 
@@ -571,6 +571,11 @@
 
     <h2 id="applications">Books and Articles Applying the Mimetic Theory</h2>
     <ul>
+      <li lang="fr">
+        <i class="booktitle">Politiques de Caïn. En dialogue avec René Girard</i>. Paris: Desclée de Brouwer, 2004.
+        <a href="https://www.editionsddb.fr/livre/fiche/politiques-de-cain-9782220054018"><abbr>ISBN</abbr> 9782220054018</a>. (310 pages)
+        <span lang="en">A collection of articles by philosophers, anthropologists and theologians focusing on conflicts among brothers.</span>
+      </li>
       <li>Alison, James; Palaver, Wolfgang (editors):
         <i class="booktitle">The Palgrave Handbook of Mimetic Theory and Religion</i>. Palgrave Macmillan <abbr>US</abbr>, 2017. (549 pages)
         <a href="https://www.palgrave.com/us/book/9781137552808"><abbr>ISBN</abbr> 978-1-137-55280-8</a>. 
@@ -837,11 +842,17 @@
 
     <h2>Interview and Talks</h2>
     <ul>
-      <li><span lang="fr">Girard, René</span>:
+      <li>
         <a href="https://www.youtube.com/watch?v=GIwEs1RkiX4" lang="fr">René Girard - Entretien avec Jacques Chancel (1978)</a>
         (René Girard Archives on YouTube, 58 minutes, 29.04.2016).
         This is an audio recording of an interview by the journalist Jacques Chancel in Radioscopie (France Inter) on 02.11.1978.
         The video has no subtitles.
+        <!--Cf. also Artesquieu channel: https://www.youtube.com/watch?v=5PJdPFHSwXE -->
+      </li>
+      <li>
+        <a href="https://www.youtube.com/watch?v=ZP6T8Rhv0lI" lang="fr">René Girard : Le christianisme est-il une religion du livre&nbsp;?</a>
+        (Artesquieu on YouTube, 58 minutes, 27.06.2019).
+        Interview from <span lang="fr">Présence protestante</span>, dated 1996.
       </li>
       <li><span lang="fr">Girard, René</span>:
         <a href="https://www.youtube.com/watch?v=VY23aM_k9XA" lang="fr">René Girard - La Violence au Cœur des Sociétés (2002)</a>
