BNF 1/2 - Le problème du sacrifice dans l'anthropologie moderne.

--- a/humanities/girard_rene.html
+++ b/humanities/girard_rene.html
@@ -861,6 +861,11 @@
         on 16.11.2002. Girard's talk is preceded by a 7-minute introduction by Jean Boissonnat.
         The video has no subtitles.
       </li>
+      <li><span lang="fr">Girard, René</span>:
+        <a href="https://www.youtube.com/watch?v=IIxRSKg9Rgc" lang="fr">René Girard - BNF 1/2 - Le Problème du Sacrifice dans l'Anthropologie Moderne</a>
+        (René Girard Archives on YouTube, 55 minutes, 10.11.2015).
+        Recording of a talk given on 21.10.2002.
+      </li>
     </ul>
 
     <h2>Other Links</h2>
