BNF 2/2: Le sacrifice dans l'Inde Védique

--- a/humanities/girard_rene.html
+++ b/humanities/girard_rene.html
@@ -866,6 +866,11 @@
         (René Girard Archives on YouTube, 55 minutes, 10.11.2015).
         Recording of a talk given on 21.10.2002.
       </li>
+      <li><span lang="fr">Girard, René</span>:
+        <a href="https://www.youtube.com/watch?v=3FKYqqzwinA" lang="fr">René Girard - BNF 2/2 - Le Sacrifice dans l'Inde Védique</a>
+        (René Girard Archives on YouTube, 56 minutes, 10.11.2015).
+        Recording of a talk given on 22.10.2002 and broadcast on <span lang="fr">France Culture</span>.
+      </li>
     </ul>
 
     <h2>Other Links</h2>
