Shakespeare on Passions (2003).

--- a/humanities/girard_rene.html
+++ b/humanities/girard_rene.html
@@ -850,7 +850,7 @@
         <!--Cf. also Artesquieu channel: https://www.youtube.com/watch?v=5PJdPFHSwXE -->
       </li>
       <li>
-        <a href="https://www.youtube.com/watch?v=ZP6T8Rhv0lI" lang="fr">René Girard : Le christianisme est-il une religion du livre&nbsp;?</a>
+        <a href="https://www.youtube.com/watch?v=ZP6T8Rhv0lI" lang="fr">René Girard&nbsp;: Le christianisme est-il une religion du livre&nbsp;?</a>
         (Artesquieu on YouTube, 58 minutes, 27.06.2019).
         Interview from <span lang="fr">Présence protestante</span>, dated 1996.
       </li>
@@ -870,6 +870,13 @@
         <a href="https://www.youtube.com/watch?v=3FKYqqzwinA" lang="fr">René Girard - BNF 2/2 - Le Sacrifice dans l'Inde Védique</a>
         (René Girard Archives on YouTube, 56 minutes, 10.11.2015).
         Recording of a talk given on 22.10.2002 and broadcast on <span lang="fr">France Culture</span>.
+      </li>
+      <li><span lang="fr">Girard, René</span>:
+        <a href="https://www.youtube.com/watch?v=RAMX5AWqKVQ">René Girard - Shakespeare on Passions (2003)</a>
+        (René Girard Archives on YouTube, 45 minutes, 09.11.2005).
+        This is a video recording of René Girard's talk at the 2003 Colloquium on Violence and Religion in Innsbruck, Austria, on 20 June 2003.
+        The video quality is low, but the audio is good enough; there are subtitles in French.
+        <!--Copy without the intro: https://www.youtube.com/watch?v=K9_F5_KtVN8 -->
       </li>
     </ul>
 
