--- a/404.html
+++ b/404.html
@@ -37,36 +37,36 @@ permalink: /404.html
   <nav id="sitemap">
     <h2>Site Map</h2>
     <ul>
-      <li><a href="../index.html">Home</a></li>
-      <li><a href="../philscience/index.html">Philosophy of Science</a>
+      <li><a href="http://cstrobbe.github.io/philosophy-and-science/index.html">Home</a></li>
+      <li><a href="http://cstrobbe.github.io/philosophy-and-science/philscience/index.html">Philosophy of Science</a>
         <ul>
-          <li><a href="../philscience/fleck_ludwik.html" lang="de">Ludwik Fleck</a></li>
+          <li><a href="http://cstrobbe.github.io/philosophy-and-science/philscience/fleck_ludwik.html" lang="de">Ludwik Fleck</a></li>
         </ul>
       </li>
-      <li><a href="../philosophy/index.html">Philosophy</a>
+      <li><a href="http://cstrobbe.github.io/philosophy-and-science/philosophy/index.html">Philosophy</a>
         <ul>
-          <li><a href="../philosophy/learningphilosophy.html">Learning Philosophy</a></li>
-          <li><a href="../philosophy/thinking.html" title="Thinking, Including Critical Thinking">Thinking</a></li>
-          <!--li><a href="../philosophy/religion.html">Religion and Faith</a></li-->
-          <li><a href="../philosophy/kant.html">Immanuel Kant</a></li>
-          <li><a href="../philosophy/hegel_gwf.html">G.W.F. Hegel</a></li>
-          <li><a href="../philosophy/marx_karl.html">Karl Marx</a></li>
+          <li><a href="http://cstrobbe.github.io/philosophy-and-science/philosophy/learningphilosophy.html">Learning Philosophy</a></li>
+          <li><a href="http://cstrobbe.github.io/philosophy-and-science/philosophy/thinking.html" title="Thinking, Including Critical Thinking">Thinking</a></li>
+          <!--li><a href="http://cstrobbe.github.io/philosophy-and-science/philosophy/religion.html">Religion and Faith</a></li-->
+          <li><a href="http://cstrobbe.github.io/philosophy-and-science/philosophy/kant.html">Immanuel Kant</a></li>
+          <li><a href="http://cstrobbe.github.io/philosophy-and-science/philosophy/hegel_gwf.html">G.W.F. Hegel</a></li>
+          <li><a href="http://cstrobbe.github.io/philosophy-and-science/philosophy/marx_karl.html">Karl Marx</a></li>
         </ul>
       </li>
-      <li><a href="../science/index.html">Science</a>
+      <li><a href="http://cstrobbe.github.io/philosophy-and-science/science/index.html">Science</a>
         <ul>
-          <li><a href="../science/ioannidis.html" 
+          <li><a href="http://cstrobbe.github.io/philosophy-and-science/science/ioannidis.html" 
             title="Ioannidis on why most published research findings are false">John Ioannidis</a>
           </li>
-          <li class="notyet"><a href="../science/mathematics.html">Mathematics &amp; Statistics</a></li>
-          <li><a href="../science/machine-learning.html">Machine Learning</a></li>
-          <li><a href="../science/doctoral-research.html">Dissertation / <abbr>PhD</abbr></a></li>
-          <li><a href="../science/hdm_scienceday.html"><abbr>HdM</abbr> Science Day</a></li>
+          <li class="notyet"><a href="http://cstrobbe.github.io/philosophy-and-science/science/mathematics.html">Mathematics &amp; Statistics</a></li>
+          <li><a href="http://cstrobbe.github.io/philosophy-and-science/science/machine-learning.html">Machine Learning</a></li>
+          <li><a href="http://cstrobbe.github.io/philosophy-and-science/science/doctoral-research.html">Dissertation / <abbr>PhD</abbr></a></li>
+          <li><a href="http://cstrobbe.github.io/philosophy-and-science/science/hdm_scienceday.html"><abbr>HdM</abbr> Science Day</a></li>
         </ul>
       </li>
-      <li><a href="../science/index.html">Humanities</a>
+      <li><a href="http://cstrobbe.github.io/philosophy-and-science/science/index.html">Humanities</a>
         <ul>
-          <li><a href="../humanities/girard_rene.html" lang="fr">René Girard</a>
+          <li><a href="http://cstrobbe.github.io/philosophy-and-science/humanities/girard_rene.html" lang="fr">René Girard</a>
           </li>
         </ul>
       </li>
