--- a/Licence_CC-BY-NC-SA-4.0.html
+++ b/Licence_CC-BY-NC-SA-4.0.html
@@ -10,7 +10,7 @@
   <style type="text/css">#deed-main a{font-weight:normal;}.shaded{background-color:#eeeeee;margin:15px 0;padding:8px;clear:both;}h3{margin-top:0;padding-left:0;}</style>
   <link rel="index" href="index.html" /><!-- index rel, listed in HTML5 link type extensions: http://microformats.org/wiki/existing-rel-values#HTML5_link_type_extensions -->
 </head>
-<body>
+<body lang="en-US">
 <p id="header"><a href="//creativecommons.org/">Creative Commons</a></p>
 <div id="deed" class="yellow">
 <div id="deed-head">
