A propos de la Passion de Gibson (2003)

--- a/humanities/girard_rene.html
+++ b/humanities/girard_rene.html
@@ -878,6 +878,12 @@
         The video quality is low, but the audio is good enough; there are subtitles in French.
         <!--Copy without the intro: https://www.youtube.com/watch?v=K9_F5_KtVN8 -->
       </li>
+      <li>
+        <a href="https://www.youtube.com/watch?v=_whSwmXJaAY" lang="fr">René Girard - A propos de la Passion de Gibson (2003)</a>
+        (René Girard Archives on YouTube, 5 minutes, 09.11.2015).
+        Interview on <abbr>KTO</abbr> about Mel Gibson's film
+        <a href="https://en.wikipedia.org/wiki/The_Passion_of_the_Christ">The Passion of the Christ (2004)</a>.
+      </li>
     </ul>
 
     <h2>Other Links</h2>
