Konnikova: Humanities aren't a science. Stop treating them like one

--- a/humanities/index.html
+++ b/humanities/index.html
@@ -719,6 +719,10 @@
         <i class="booktitle">Literature and Science</i>. Outlining Literature. Palgrave, 2010. (224 pages)
         <a href="https://www.macmillanihe.com/page/detail/Literature-and-Science/?K=9780230218161"><abbr>ISBN</abbr> 9780230218178</a>.
       </li>
+      <li>Konnikova, Maria:
+        <a href="https://blogs.scientificamerican.com/literally-psyched/humanities-arent-a-science-stop-treating-them-like-one/">Humanities aren't a science. Stop treating them like one</a>,
+        <i class="blog">Literally Psyched (Scientific American blog)</i>, 10.08.2012.
+      </li>
       <li>The Gombrich Archive:
         <a href="https://gombrich.co.uk/papers-and-articles/">Papers and articles</a>:
         papers by art historian
