Girard & Enthove: Mensonge Romantique et Vérité Romanesque

--- a/humanities/girard_rene.html
+++ b/humanities/girard_rene.html
@@ -884,6 +884,12 @@
         Interview on <abbr>KTO</abbr> about Mel Gibson's film
         <a href="https://en.wikipedia.org/wiki/The_Passion_of_the_Christ">The Passion of the Christ (2004)</a>.
       </li>
+      <li>
+        <a href="https://www.youtube.com/watch?v=8XpIzVdPwmE" lang="fr">René Girard - Mensonge Romantique et Vérité Romanesque</a>
+        (René Girard Archives on YouTube, 25 minutes, 09.11.2015).
+        The first part of a conversation between the philosopher Raphaël Enthoven and <span lang="fr">René Girard</span>
+        first aired on 31 August 2004 on France Inter and rebroadcast on 10 November 2015.
+      </li>
     </ul>
 
     <h2>Other Links</h2>
