Girard & Enthoven: Le Bouc Emissaire

--- a/humanities/girard_rene.html
+++ b/humanities/girard_rene.html
@@ -890,6 +890,11 @@
         The first part of a conversation between the philosopher Raphaël Enthoven and <span lang="fr">René Girard</span>
         first aired on 31 August 2004 on France Inter and rebroadcast on 10 November 2015.
       </li>
+      <li>
+        <a href="https://www.youtube.com/watch?v=SUiWCeOtZyc" lang="fr">René Girard - Le Bouc Emissaire</a>
+        (René Girard Archives on YouTube, 25 minutes, 09.11.2015).
+        The second part of a conversation between the philosopher Raphaël Enthoven and <span lang="fr">René Girard</span>.
+      </li>
     </ul>
 
     <h2>Other Links</h2>
