--- a/humanities/girard_rene.html
+++ b/humanities/girard_rene.html
@@ -895,6 +895,11 @@
         (René Girard Archives on YouTube, 25 minutes, 09.11.2015).
         The second part of a conversation between the philosopher Raphaël Enthoven and <span lang="fr">René Girard</span>.
       </li>
+      <li>
+        <a href="https://www.youtube.com/watch?v=oaZvaS3Y6I4" lang="fr">René Girard - La Raison de Dieu</a>
+        (René Girard Archives on YouTube, 25 minutes, 09.11.2015).
+        The third part of a conversation between the philosopher Raphaël Enthoven and <span lang="fr">René Girard</span>.
+      </li>
     </ul>
 
     <h2>Other Links</h2>
