Girard & Enthoven: Othello ou Hamlet, même défaite

--- a/humanities/girard_rene.html
+++ b/humanities/girard_rene.html
@@ -900,6 +900,11 @@
         (René Girard Archives on YouTube, 25 minutes, 09.11.2015).
         The third part of a conversation between the philosopher Raphaël Enthoven and <span lang="fr">René Girard</span>.
       </li>
+      <li>
+        <a href="https://www.youtube.com/watch?v=k-wnNwz-cXg" lang="fr">René Girard - Othello ou Hamlet, même défaîte</a>
+        (René Girard Archives on YouTube, 25 minutes, 09.11.2015).
+        The fourth part of a conversation between the philosopher Raphaël Enthoven and <span lang="fr">René Girard</span>.
+      </li>
     </ul>
 
     <h2>Other Links</h2>
