Girard & Enthoven: Le triangle nietzschéen

--- a/humanities/girard_rene.html
+++ b/humanities/girard_rene.html
@@ -905,6 +905,11 @@
         (René Girard Archives on YouTube, 25 minutes, 09.11.2015).
         The fourth part of a conversation between the philosopher Raphaël Enthoven and <span lang="fr">René Girard</span>.
       </li>
+      <li>
+        <a href="https://www.youtube.com/watch?v=hrHGDsDMxEA" lang="fr">René Girard - Le Triangle Nietzschéen</a>
+        (René Girard Archives on YouTube, 25 minutes, 09.11.2015).
+        The fifth and last part of a conversation between the philosopher Raphaël Enthoven and <span lang="fr">René Girard</span>.
+      </li>
     </ul>
 
     <h2>Other Links</h2>
