Girard: Entretien sur Radio Courtoisie (2005)

--- a/humanities/girard_rene.html
+++ b/humanities/girard_rene.html
@@ -910,6 +910,10 @@
         (René Girard Archives on YouTube, 25 minutes, 09.11.2015).
         The fifth and last part of a conversation between the philosopher Raphaël Enthoven and <span lang="fr">René Girard</span>.
       </li>
+      <li>
+        <a href="https://www.youtube.com/watch?v=36pvMK-BrnM" lang="fr">René Girard - Entretien sur Radio Courtoisie (2005)</a>
+        (Artesquieu on YouTube, 82 minutes, 29.01.2019).
+      </li>
     </ul>
 
     <h2>Other Links</h2>
