Institute of Art and Ideas: 70 Philosophy Books Everyone Should Read

--- a/philosophy/index.html
+++ b/philosophy/index.html
@@ -1763,6 +1763,12 @@
         <abbr>DOI</abbr>: <a href="https://doi.org/10.1093/aristotelian/64.1.85">https://doi.org/10.1093/aristotelian/64.1.85</a>.
         (Free <abbbr>PDF</abbbr>.)<!--@@PDF-->
       </li>
+      <li><abbr title="Institute of Art and Ideas">IAI</abbr> News Editorial Staff:
+        <a href="https://iainews.iai.tv/articles/70-philosophy-books-everyone-should-read-auid-1168">70 Philosophy Books Everyone Should Read</a>,
+        <i class="website">The Institute of Art and Ideas</i>, 14.11.2018.
+        <br />On 15.11.2018, World Philosophy Day, British philosopher <a href="https://twitter.com/philosophybites/status/1063062838007226369">Nigel Warburton tweeted</a>,
+        <q>70 Philosophy Books Everyone Should Read? Hardly. I doubt I’ve ever met anyone who has read all or even most of these.</q>
+      </li>
     </ul>
 
     <h2>Other Resources</h2>
