Allen: Five Books

--- a/humanities/index.html
+++ b/humanities/index.html
@@ -851,6 +851,42 @@
         <q>On this website you can find a wide range of materials designed to help researchers think about, handle and analyse large volumes of complex qualitative and qualitative longitudinal data, including working with multiple archived data sets.</q>
         <!-- See Sara Lewthwaite: https://twitter.com/slewth/status/1095738137693904896 -->
       </li>
+      <li><!--@@temp @@move-->
+        <a href="https://fivebooks.com/best-books/productivity-david-allen/">The best books on Productivity recommended by David Allen</a>,
+        <i class="site">Five Books</i>, 22.08.2019.
+        David Allen, author of <i class="booktitle">Getting Things Done</i>, recommends the following books:
+        <ul>
+          <li>Levitin, Daniel J.:
+            <a href="http://www.daniellevitin.com/theorganizedmind/"><i class="booktitle">The Organized Mind: Thinking Straight in the Age of Information Overload</i></a>.
+            (Penguin, 2015. <a href="https://www.penguin.co.uk/books/193205/the-organized-mind/9780241965788.html"><abbr>ISBN</abbr> 9780241965788</a>.)
+          </li>
+          <li>Compernolle, Theo:
+            <i class="booktitle">BrainChains: Your Thinking Brain Explained in Simple Terms</i>. (2014)
+            (<a href="https://sites.google.com/site/liberateyourbrain/">BrainChains site on Google</a>.
+            Dutch: <i class="booktitle" lang="nl">Ontketen je brein</i>. Lannoo, 2014.
+            <a href="https://www.lannoo.be/nl/ontketen-je-brein"><abbr>ISBN</abbr> 9789401417457</a>.)
+          </li>
+          <li>Gawande, Atul:
+            <i class="booktitle">The Checklist Manifesto: How to Get Things Rigtht</i>. (2011)
+            (<a href="http://atulgawande.com/book/the-checklist-manifesto/">The Checklist Manifesto website</a>.)
+          </li>
+          <li>Kelly, Kevin:
+            <a href="https://en.wikipedia.org/wiki/The_Inevitable_(book)"><i class="booktitle">The Inevitable: Understanding the 12 Technological Forces That Will Shape Our Future</i></a>.
+            (2016)
+          </li>
+          <li>Burkeman, Oliver:
+            <a href="https://canongate.co.uk/books/1239-the-antidote-happiness-for-people-who-cant-stand-positive-thinking/"><i class="booktitle">The Antidote</i></a>.
+            (2012)
+          </li>
+        </ul>
+        David Allen quote:
+        <q cite="https://youtu.be/CHxhjDPKfbY?t=402">Don't keep anything in your head for the rest of your life. That's going to feel unnatural, awkward and unnecessary.
+        <strong>Every single thing you're committed to finish that takes more than on step to finish it, you need to clarify exactly what that outcome and project is
+        and put that on a project list that you look at, at least once a week.</strong>
+        Every single next action you need to take about any of your commitments that you are involved in, you need to clarify and park those in appropriate places
+        so that you are going to see those actions on a regular basis.</q>
+        (<a href="https://www.youtube.com/watch?v=CHxhjDPKfbY">The Art of Stress-Free Productivity: David Allen at <abbr>TED</abbr>xClaremontColleges</a>.)
+      </li>
     </ul>
 
     <!--@@separate "Two Cultures" page?-->
