--- a/philosophy/index.html
+++ b/philosophy/index.html
@@ -1795,6 +1795,13 @@
         <i class="booktitle">Empty Ideas: A Critique of Analytic Philosophy</i>. Oxford University Press, 2014. (272 pages)
         <a href="https://global.oup.com/academic/product/empty-ideas-9780199330812"><abbr>ISBN</abbr> 9780199330812</a>.
       </li>
+      <li>Gombrowicz, Witold:
+        <i class="booktitle">A Guide to Philosophy in Six Hours and Fifteen Minutes</i>. Translated by Benjamin Ivry. Yale University Press, 2012. (120 pages)
+        <a href="https://yalebooks.yale.edu/book/9780300181685/guide-philosophy-six-hours-and-fifteen-minutes"><abbr>ISBN</abbr> 9780300181685</a>.
+        <br />From the publisher's description of the book:
+        <q>In a small literary gem full of sardonic wit, brilliant insights, and provocative criticism Witold Gombrowicz discusses
+        Kant, Hegel, Schopenhauer, Kierkegaard, Sartre, and Heidegger in six "one-hour" essays—and addresses Marxism in a "fifteen-minute" piece.</q>
+      </li>
     </ul>
 
     <h2>Death</h2>
