Understanding Derrida, Deconstruction & Of Grammatology

--- a/philosophy/index.html
+++ b/philosophy/index.html
@@ -2144,6 +2144,10 @@
         <a href="http://www.filosofico.net/" hreflang="it">FILOSOFICO.net</a>:
         website by the Italian philosopher <span lang="it">Diego Fusaro</span>.
       </li>
+      <li>
+        <a href="https://www.youtube.com/watch?v=HKJlSY0DBBA">Understanding Derrida, Deconstruction &amp; Of Grammatology</a>
+        (Then &amp; Now on YouTube, 17 minutes, 25.08.2017).
+      </li>
       <!--@@postmodernism:-->
       <li>
         <a href="http://www.critical-theory.com/foucault-obscurantism-they-it/">Foucault On Obscurantism: ‘They Made Me Do It!’</a>,
