School of Life: Derrida

--- a/philosophy/index.html
+++ b/philosophy/index.html
@@ -2148,6 +2148,10 @@
         <a href="https://www.youtube.com/watch?v=HKJlSY0DBBA">Understanding Derrida, Deconstruction &amp; Of Grammatology</a>
         (Then &amp; Now on YouTube, 17 minutes, 25.08.2017).
       </li>
+      <li>
+        <a href="https://www.youtube.com/watch?v=H0tnHr2dqTs">Philosophy: Jacques Derrida</a>
+        (The Schoolf of Life on YouTube).<!--@@minutes, date-->
+      </li>
       <!--@@postmodernism:-->
       <li>
         <a href="http://www.critical-theory.com/foucault-obscurantism-they-it/">Foucault On Obscurantism: ‘They Made Me Do It!’</a>,
