--- a/philosophy/index.html
+++ b/philosophy/index.html
@@ -2150,7 +2150,7 @@
       </li>
       <li>
         <a href="https://www.youtube.com/watch?v=H0tnHr2dqTs">Philosophy: Jacques Derrida</a>
-        (The Schoolf of Life on YouTube).<!--@@minutes, date-->
+        (The School of Life on YouTube).<!--@@minutes, date-->
       </li>
       <!--@@postmodernism:-->
       <li>
