Nussbaum: Psychology is Science

--- a/philscience/index.html
+++ b/philscience/index.html
@@ -641,6 +641,10 @@
         <a href="https://www.youtube.com/watch?v=eUikMLI6spI">Is Psychology a Science?</a>
         (YouTube, 16 minutes, 23.04.2012): psychology students debate this question.
       </li>
+      <li>Nussbaum, David:
+        <a href="http://davenussbaum.com/blog/psychology-is-science">Psychology is Science</a>,
+        <i class="blog">David Nussbaum's blog</i>, 16.07.2012.
+      </li>
       <li>Nick Brown:
         <a href="https://www.youtube.com/watch?v=SPtWPBapyF0">Limits of Scientific Psychology</a>
         (YouTube, 16 minutes, 13.12.2015): presentation at <abbr>TEDx</abbr>Rhodes, 05.09.2015.
