--- a/philscience/index.html
+++ b/philscience/index.html
@@ -645,6 +645,10 @@
         <a href="http://davenussbaum.com/blog/psychology-is-science">Psychology is Science</a>,
         <i class="blog">David Nussbaum's blog</i>, 16.07.2012.
       </li>
+      <li>psyfile / Brady Haran:
+        <a href="https://www.youtube.com/watch?v=fyovWBAgCnc">Is Psychology a Science?</a>
+        (YouTube, 9 minutes, 28.01.2013).
+      </li>
       <li>Nick Brown:
         <a href="https://www.youtube.com/watch?v=SPtWPBapyF0">Limits of Scientific Psychology</a>
         (YouTube, 16 minutes, 13.12.2015): presentation at <abbr>TEDx</abbr>Rhodes, 05.09.2015.
