Gumbrecht: Wenn sich alle mit allen vergleichen, schmerzt das Ergebnis viele. NZZ

--- a/humanities/girard_rene.html
+++ b/humanities/girard_rene.html
@@ -843,6 +843,10 @@
 
     <h2>Interview and Talks</h2>
     <ul>
+      <li>Gumbrecht, Hans Ulrich:
+        <a href="https://www.nzz.ch/feuilleton/rene-girard-der-prophet-des-neids-erklaert-die-soziale-dynamik-ld.1449200" hreflang="de" lang="de">Wenn sich alle mit allen vergleichen, schmerzt das Ergebnis viele: René Girard, der «Prophet des Neids», ist ein Denker auf der Höhe der neuen sozialen Dynamiken</a>,
+        <i class="newspaper">Neue Zürcher Zeitung</i>, 12.01.2019.
+      </li>
       <li>
         <a href="https://www.youtube.com/watch?v=GIwEs1RkiX4" lang="fr">René Girard - Entretien avec Jacques Chancel (1978)</a>
         (René Girard Archives on YouTube, 58 minutes, 29.04.2016).
