--- a/humanities/the-one-whose-name-must-not-be-mentioned.html
+++ b/humanities/the-one-whose-name-must-not-be-mentioned.html
@@ -47,7 +47,7 @@
       <li><a href="../humanities/index.html">Humanities</a>
         <ul>
           <li><a href="../humanities/girard_rene.html" lang="fr">René Girard</a></li>
-          <li class="active"><a href="../humanities/the-one-whose-name-must-not-be-mentioned.html" lang="fr">The Unnamable One</a></li>
+          <li class="active"><a href="../humanities/the-one-whose-name-must-not-be-mentioned.html">The Unnamable One</a></li>
         </ul>
       </li>
     </ul>
