Link to new page (The Unnamable One). Various minor edits.

--- a/index.html
+++ b/index.html
@@ -47,6 +47,7 @@
       <li><a href="./humanities/index.html">Humanities</a>
         <ul>
           <li><a href="./humanities/girard_rene.html" lang="fr">René Girard</a></li>
+          <li><a href="./humanities/the-one-whose-name-must-not-be-mentioned.html">The Unnamable One</a></li>
         </ul>
       </li>
     </ul>
@@ -100,12 +101,14 @@
     </p>
     <p>
       These are fascinating topics, but please do not forget to get some
-      <a href="https://www.youtube.com/watch?v=maxiipwly0M">exercise for 
-      intellectuals</a>!
+      <a href="https://www.youtube.com/watch?v=maxiipwly0M">exercise for intellectuals</a>!
     </p>
 
     <h2 id="updates">Latest Updates</h2>
     <ul>
+      <li>August 2019: new page: <a href="humanities/the-one-whose-name-must-not-be-mentioned.html">The Unnamable One</a>&nbsp;/
+        The One Whose Name Must Not Be Mentioned.
+      </li>
       <li>July 2018: new page: <a href="philosophy/kant.html" lang="de">Immanuel Kant</a>.</li>
       <li>May 2018: new page: <a href="philosophy/marx_karl.html" lang="de">Karl Marx</a>.</li>
       <li>November 2017: new page: <a href="science/machine-learning.html">Machine Learning and Artificial Intelligence</a>.</li>
@@ -125,11 +128,11 @@
       <strong><a href="http://www.unesco.org/new/en/social-and-human-sciences/themes/most-programme/humanities-and-philosophy/philosophy-day-at-unesco/">World Philosophy Day</a></strong> in 2005.
       <!--Old URL: http://www.unesco.org/new/en/social-and-human-sciences/themes/philosophy/philosophy-day-at-unesco/ -->
       The event is celebrated each year on the third Thursday of November.
+    </p>
+    <p>In 2015, World Philosophy Day was celebrated on Thursday 19 November.
       In 2016, 
       <a href="http://www.unesco.org/new/en/unesco/events/prizes-and-celebrations/celebrations/international-days/world-philosophy-day-2016/">World Philosophy Day</a>
       was celebrated on Thursday 17 November.
-    </p>
-    <p>In 2015, World Philosophy Day was celebrated on Thursday 19 November. 
       Below are some resources published on the occasion of World Philosophy Day 2015:
     </p>
     <ul>
@@ -191,7 +194,7 @@
       </li>
       <li>
         <a href="https://en.wikipedia.org/wiki/Truth_Coming_Out_of_Her_Well">Truth Coming Out of Her Well</a>
-        (Wikipedia article about the painting by <span lang="fr">Jean-Léon Gérôme</span>.
+        (Wikipedia article about the painting by <span lang="fr">Jean-Léon Gérôme</span>).
       </li>
     </ul>
     <!-- 
