Wikipedia: List of common misconceptions

--- a/index.html
+++ b/index.html
@@ -193,6 +193,10 @@
         <a href="https://en.wikipedia.org/wiki/Bell_hooks">bell hooks</a>.
       </li>
       <li>
+        <a href="https://en.wikipedia.org/wiki/List_of_common_misconceptions">List of common misconceptions</a>:
+        a long but incomplete list on Wikipedia.
+      </li>
+      <li>
         <a href="https://en.wikipedia.org/wiki/Truth_Coming_Out_of_Her_Well">Truth Coming Out of Her Well</a>
         (Wikipedia article about the painting by <span lang="fr">Jean-Léon Gérôme</span>).
       </li>
