Link to new page (The Unnamable One). Various minor edits.

--- a/philosophy/thinking.html
+++ b/philosophy/thinking.html
@@ -47,6 +47,7 @@
       <li><a href="../humanities/index.html">Humanities</a>
         <ul>
           <li><a href="../humanities/girard_rene.html" lang="fr">René Girard</a></li>
+          <li><a href="../humanities/the-one-whose-name-must-not-be-mentioned.html">The Unnamable One</a></li>
         </ul>
       </li>
     </ul>
@@ -293,7 +294,7 @@
       <li>
         <a href="https://streetepistemology.com/">Street Epistemology</a>:
         website inspired by Peter Boghossian's book <i class="booktitle">A Manual for Creating Atheists</i>,
-        which introduced the term &lduo;street epistemology&rdquo;. The website's homepage presents the following definition of the term:
+        which introduced the term &ldquo;street epistemology&rdquo;. The website's homepage presents the following definition of the term:
         <blockquote><p><dfn style="font-weight: bold;">Street Epistemology</dfn> (<abbr>SE</abbr>) is the application of epistemology (the study of knowledge) outside of formal academic contexts.</p></blockquote>
         The website's aim is to help
         <q>create and empower 10,000 Street Epistemologists. The people on this page are committed to helping others lead more reflective lives with less reliance on unreliable epistemology.</q>
@@ -420,7 +421,7 @@
         <i class="booktitle">High Existence</i>, 01.03.2018.
         Peterson's recommendations (apparently) are the following:
         <ol>
-          <li><i class="booktitle">Brave New World</i> Aldous Huxley by (1932),</li>
+          <li><i class="booktitle">Brave New World</i> by Aldous Huxley (1932),</li>
           <li><i class="booktitle">1984</i> by George Orwell (1949),</li>
           <li><i class="booktitle">The Road To Wigan Pier</i> by George Orwell (1937),</li>
           <li><i class="booktitle">Crime And Punishment</i> by Fyodor Dostoevsky (1866),</li>
