René Girard: Warum kämpfen wir? Und wie können wir aufhören?

--- a/humanities/girard_rene.html
+++ b/humanities/girard_rene.html
@@ -849,6 +849,12 @@
         <i class="newspaper">Neue Zürcher Zeitung</i>, 12.01.2019.
       </li>
       <li>
+        <a href="https://www.nzz.ch/feuilleton/rene-girard-spricht-ueber-neid-grausamkeit-und-glauben-ld.1464403" hreflang="de" lang="de">René Girard: Warum kämpfen wir? Und wie können wir aufhören?</a>,
+        <i class="newspaper">Neue Zürcher Zeitung</i>, 10.03.2019.
+        This is a shortened translation of an interview by Robert Pogue Harrison that took place in 2005 and
+        was broadcast as part of the program &ldquo;Entitled Opinions&rdquo;.
+      </li>
+      <li>
         <a href="https://www.youtube.com/watch?v=GIwEs1RkiX4" lang="fr">René Girard - Entretien avec Jacques Chancel (1978)</a>
         (René Girard Archives on YouTube, 58 minutes, 29.04.2016).
         This is an audio recording of an interview by the journalist Jacques Chancel in Radioscopie (France Inter) on 02.11.1978.
