--- a/humanities/girard_rene.html
+++ b/humanities/girard_rene.html
@@ -855,6 +855,12 @@
         was broadcast as part of the program &ldquo;Entitled Opinions&rdquo;.
       </li>
       <li>
+        <a href="https://www.nzz.ch/feuilleton/rrene-girard-neid-ist-die-triebfeder-unseres-begehrens-ld.1472161" hreflang="de" lang="de">René Girard: «Wir reden so viel über Sex, weil wir es nicht wagen, über Neid zu sprechen»</a>,
+        <i class="newspaper">Neue Zürcher Zeitung</i>, 04.08.2019.
+        This is a shortened translation of an interview by Robert Pogue Harrison that took place in 2005 and
+        was broadcast as part of the program &ldquo;Entitled Opinions&rdquo;.
+      </li>
+      <li>
         <a href="https://www.youtube.com/watch?v=GIwEs1RkiX4" lang="fr">René Girard - Entretien avec Jacques Chancel (1978)</a>
         (René Girard Archives on YouTube, 58 minutes, 29.04.2016).
         This is an audio recording of an interview by the journalist Jacques Chancel in Radioscopie (France Inter) on 02.11.1978.
