Why Should Anyone Care About Mimetic Theory?

--- a/humanities/girard_rene.html
+++ b/humanities/girard_rene.html
@@ -959,6 +959,10 @@
         <i class="booktitle">On Desire: Why We Want What We Want</i>. Oxford University Press, 2007. (336 pages)
         <a href="https://global.oup.com/academic/product/on-desire-9780195327076"><abbr>ISBN</abbr> 9780195327076</a>.
       </li>
+      <li>
+        <a href="https://www.youtube.com/watch?v=Y8o-bjw8rXk">Why Should Anyone Care About Mimetic Theory?</a>
+        (RavenCast on YouTube, 2 minutes, 24.07.2013).
+      </li>
     </ul>
   </main>
 
