Becklo: “Beasts of No Nation”: The Violent and the Sacred and René Girard

--- a/humanities/girard_rene.html
+++ b/humanities/girard_rene.html
@@ -963,6 +963,10 @@
         <a href="https://www.youtube.com/watch?v=Y8o-bjw8rXk">Why Should Anyone Care About Mimetic Theory?</a>
         (RavenCast on YouTube, 2 minutes, 24.07.2013).
       </li>
+      <li>Becklo, Matthew:
+        <a href="https://www.wordonfire.org/resources/blog/beasts-of-no-nation-the-violent-and-the-sacred-and-rene-girard/19627/">“Beasts of No Nation”: The Violent and the Sacred and René Girard</a>,
+        <i class="blog">World on Fire Blog</i>, 13.11.2015.
+      </li>
     </ul>
   </main>
 
