Death of visionary thinker René Girard (Jesuits in Britain)

--- a/humanities/girard_rene.html
+++ b/humanities/girard_rene.html
@@ -766,6 +766,10 @@
         05.11.2015.
         <span lang="en-GB">The first few minutes of this news broadcast are about</span> René Girard.
       </li>
+      <li>
+        <a href="https://www.jesuit.org.uk/death-visionary-thinker-ren%C3%A9-girard">Death of visionary thinker René Girard</a>,
+        <i class="website">Jesuits in Britain</i>, 05.11.2015.
+      </li>
       <li>Europe 1:
         <a href="https://www.youtube.com/watch?v=qoaEdWLT6TQ">René Girard : l'hommage de Jean-Pierre Elkabbach</a>,
         06.11.2015.
